sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.code
def combSort() {
	var ecart = getNombreValeurs
	var inverse = true	
	do {
		inverse = false
		if (ecart > 1) {
			ecart = ecart /1.3
		}
		var i = 0
		while (i+ecart < getNombreValeurs) {
			if (!plusPetit(i,i+ecart)) {
				echange(i,i+ecart)
				i +=1
				inverse = true
			}
		}
	} while ((ecart>1)||(inverse)) 
}
i = O
   tant que i+ecart < lgr faire:
     si i et i+ecart doivent être inversés, le faire
     incrémenter i de 1
 tant que l'écart est plus grand que 1 ou que le dernier parcours a inversé au moins un élément